[package]
name = "zenoh-backend-filesystem"
version = "1.0.0-pre.455117398744111"
repository = "https://github.com/eclipse-zenoh/zenoh-backend-filesystem"
homepage = "http://zenoh.io"
authors = [ "kydos <angelo@icorsaro.net>", "Julien Enoch <julien@enoch.fr>", "Olivier Hécart <olivier.hecart@zettascale.tech>", "Luca Cominardi <luca.cominardi@zettascale.tech>", "Sreeja Nair <sreeja.nair@zettascale.tech>" ]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = [ "network-programming" ]
description = "Backend for Zenoh using the file system"

[package.metadata]
[package.metadata.deb]
name = "zenoh-backend-filesystem"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2022 ZettaScale Technology"
section = "net"
license-file = [ "LICENSE", "0" ]
depends = "zenoh-plugin-storage-manager  (=0.11.0-dev)"

[lib]
name = "zenoh_backend_fs"
crate-type = [ "cdylib", "rlib" ]

[features]
stats = [ "zenoh/stats" ]

[dependencies]
async-std = "=1.12.0"
async-trait = "0.1.66"
dunce = "1.0.3"
env_logger = "0.10.0"
git-version = "0.3.5"
home = "0.5.4"
lazy_static = "1.4.0"
log = "0.4.17"
mime_guess = "2.0.4"
regex = "1.7.1"
rocksdb = "0.20.1"
serde_json = "1.0.94"
tempfile = "3.4.0"
uhlc = "0.5.2"
walkdir = "2.3.2"

[dependencies.zenoh]
git = "https://github.com/eclipse-zenoh/zenoh"
branch = "master"
features = [ "unstable" ]

[dependencies.zenoh-codec]
git = "https://github.com/eclipse-zenoh/zenoh"
branch = "master"

[dependencies.zenoh-collections]
git = "https://github.com/eclipse-zenoh/zenoh"
branch = "master"

[dependencies.zenoh-core]
git = "https://github.com/eclipse-zenoh/zenoh"
branch = "master"

[dependencies.zenoh-protocol]
git = "https://github.com/eclipse-zenoh/zenoh"
branch = "master"

[dependencies.zenoh-util]
git = "https://github.com/eclipse-zenoh/zenoh"
branch = "master"

[dependencies.zenoh_backend_traits]
git = "https://github.com/eclipse-zenoh/zenoh"
branch = "master"

[build-dependencies]
rustc_version = "0.4.0"